--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button class="btn-primary" id="btnPause">Pause</button>
                     <button class="btn-danger" id="btnCancel">Cancel</button>
                     <button class="btn-accent" id="btnSpeed">Speed Up (reverse)</button>
-                    <button id="btnSound">Sound: On</button>
+                    <button id="btnSound">Sound: Off</button>
                     <button id="btnReset">Force Crash</button>
                 </div>
             </section>
